--- a/abramov.yml
+++ b/abramov.yml
@@ -26,11 +26,11 @@ task_107:
     description: get even id, s where 4k is less than input (input has to be bigger than 1)
     author: Evgen Uzhva
 task_178b:
-    description: get ids кратные 3 and not кратные 5 in range (2args)
-    author: Anatolii Ibragimov
+  description: find numbers divisible by 3 and not divisible by 5 from 1 to user's input
+  author: Anatolii Ibrahimov
 task_178c:
-    description: find ids that are squares of even ids in range (2args)
-    author: Anatolii Ibragimov
+  description: find numbers that are squares of even numbers from 1 to user's input
+  author: Anatolii Ibrahimov
 task_178d:
     description: Find a count of a(k), that 2^k < a(k) < k!
     author: Viktoriya Ladanay
@@ -53,14 +53,14 @@ task_323:
     description: get all natural ids smaller that input and equally plain (Coprime integers) with each other
     author: Sergio
 task_330:
-    description: Find all perfect numbers up to your one
-    author: Nazarii Ivankiv
+  description: Find all perfect numbers up to user's input
+  author: Nazarii Ivankiv
 task_332:
   description: find such positive x,y,z,t that input =  x^2 + y^2 + z^2 + t^2
   author: Anton Romaniv
 task_554:
-    description: findning private hypotenuse
-    author: Anatolii Ibragimov
+  description: Find all Pythagoreon triples up to user's input
+  author: Anatolii Ibrahimov
 task_560:
     description: find numbers equaling the sum of each other's deviders (2args)
     author: Sergio
